Fix bounty page sidebar spacing

--- a/src/containers/Bounty/ActionBar.module.scss
+++ b/src/containers/Bounty/ActionBar.module.scss
@@ -1,7 +1,7 @@
 @import "~styles/variables.scss";
 
 .actionBar {
-  margin-bottom: $l-spacing;
+  margin-bottom: $xxl-spacing;
 }
 
 .activateButton {
