--- a/src/containers/Bounty/Bounty.module.scss
+++ b/src/containers/Bounty/Bounty.module.scss
@@ -135,7 +135,6 @@
   border-radius: $base-border-radius;
   display: flex;
   flex-direction: column;
-  margin-top: $xxl-spacing;
 
   .metadata {
 
